<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teosentli"
            android:icon="@drawable/ic_menu_teosentli"
            android:title="@string/menu_teosentli" />

        <item
            android:id="@+id/nav_plants"
            android:icon="@drawable/ic_menu_plants"
            android:title="@string/menu_plants" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_messagges"
            android:icon="@drawable/ic_menu_messagges"
            android:title="@string/menu_messagges" />


        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_menu_nature"
            android:title="@string/menu_nature" />

        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_menu_configuration"
            android:title="@string/menu_configuration" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />




    </group>
</menu>