<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/messages_luis_bg" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="675dp"
        android:text="@string/Name_Luis"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="637dp"
        android:text="@string/Status_Luis"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="160dp"
        android:layout_height="590dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:justificationMode="inter_word"
        android:text="@string/Text_Luis"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="160dp"
        android:layout_height="590dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="120dp"
        android:justificationMode="inter_word"
        android:text="@string/Text_Luis_Me"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="514dp"
        android:text="@string/Alert_Luis"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />
</RelativeLayout>